fix: category images not showing

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,8 +4,6 @@ body {
   margin: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: #ebebeb;
-
 }
 
 a {
@@ -17,7 +15,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark1) {
+@media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
